WEB-4079 Text overlapping bug fix.

--- a/fid-web/src/main/webapp/style/newCss/asset/header.css
+++ b/fid-web/src/main/webapp/style/newCss/asset/header.css
@@ -83,6 +83,7 @@
 
 .actionButtons .actions ul{
     width: 100px;
+    width: auto;
 }
 
 .greyText{
